ui: Fix low contrast when selected

--- a/data/ui/style.css
+++ b/data/ui/style.css
@@ -59,6 +59,11 @@
   background-color: @theme_base_color;
 }
 
+
+
+
+
+
 .unread-badge {
   background-color: @theme_selected_bg_color;
   color: white;
@@ -69,3 +74,12 @@
   padding: 2px 5px;
 }
 
+.muted-badge {
+  background-color: #bfbfbf;
+  color: white;
+}
+
+row:selected .unread-badge {
+  background-color: white;
+  color: @theme_selected_bg_color;
+}
